@@ -2,10 +2,14 @@ EBUILD perl-Test-Simple-0.65.ebuild 474 RMD160 0ba74837db476ef7203de62c712f288c0
 MD5 b3c0eadcdf1fc1c885bfec6c164746c2 perl-Test-Simple-0.65.ebuild 474
 RMD160 0ba74837db476ef7203de62c712f288c0f82f00e perl-Test-Simple-0.65.ebuild 474
 SHA256 a410c08160cfe465fbd9bca24fa4b4819653d98f2239dd8c933075a2513b1874 perl-Test-Simple-0.65.ebuild 474
-MISC ChangeLog 2050 RMD160 6b84e86fc34d8a45defd6cd859ef857e1b27b7d3 SHA1 7402258e1bd1595df5321b96ea2c9014b9b81e6c SHA256 6d159e65b733b4694b57fa4d698bc593a6c31495f3a1a3023e3b20baa425de04
-MD5 fd68b959f18856b5077f959b3cdf4100 ChangeLog 2050
-RMD160 6b84e86fc34d8a45defd6cd859ef857e1b27b7d3 ChangeLog 2050
-SHA256 6d159e65b733b4694b57fa4d698bc593a6c31495f3a1a3023e3b20baa425de04 ChangeLog 2050
+EBUILD perl-Test-Simple-0.66.ebuild 474 RMD160 e58f9c1eb96facb331b75632009b0197486bf066 SHA1 3e1b073ca0d3962bafcb0460999411cee1abdad6 SHA256 517ec8e8ecbf161bdf8ceb23d98a52a72ef6295c5df3799d3008a1bd1db09be3
+MD5 7e287f7ecbd731fb1af2aec30955c4c9 perl-Test-Simple-0.66.ebuild 474
+RMD160 e58f9c1eb96facb331b75632009b0197486bf066 perl-Test-Simple-0.66.ebuild 474
+SHA256 517ec8e8ecbf161bdf8ceb23d98a52a72ef6295c5df3799d3008a1bd1db09be3 perl-Test-Simple-0.66.ebuild 474
+MISC ChangeLog 2292 RMD160 ac59badf8a033b60cc24b3e99e69079f99064dcd SHA1 fb8328831c908f4f25a6365edb551c91b1f83cfa SHA256 4cd634e81ed31fc29141fcd981196cd00292030dca131cc820683b53cd3ffb55
+MD5 4855784242090088e82142a6829fdf31 ChangeLog 2292
+RMD160 ac59badf8a033b60cc24b3e99e69079f99064dcd ChangeLog 2292
+SHA256 4cd634e81ed31fc29141fcd981196cd00292030dca131cc820683b53cd3ffb55 ChangeLog 2292
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -13,3 +17,6 @@ SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca metadata
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-perl-Test-Simple-0.65 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-perl-Test-Simple-0.65 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-perl-Test-Simple-0.65 0
+MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-perl-Test-Simple-0.66 0
+RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-perl-Test-Simple-0.66 0
+SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-perl-Test-Simple-0.66 0
