@@ -1,0 +1,17 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/perl-Test-Simple-0.66.ebuild,v 1.1 2006/12/04 18:37:16 mcummings Exp $
+
+EAPI="prefix"
+
+DESCRIPTION="Virtual for Test-Simple"
+HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86"
+IUSE=""
+
+DEPEND=""
+RDEPEND="~perl-core/Test-Simple-${PV}"
