@@ -1,6 +1,16 @@
 # ChangeLog for virtual/perl-Test-Simple
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/ChangeLog,v 1.12 2006/11/11 00:03:04 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/ChangeLog,v 1.14 2006/12/04 18:37:16 mcummings Exp $
+
+*perl-Test-Simple-0.66 (04 Dec 2006)
+
+  04 Dec 2006; Michael Cummings <mcummings@gentoo.org>
+  +perl-Test-Simple-0.66.ebuild:
+  Version bump
+
+  03 Dec 2006; Markus Rothe <corsair@gentoo.org>
+  perl-Test-Simple-0.64.ebuild:
+  Stable on ppc64
 
 *perl-Test-Simple-0.65 (11 Nov 2006)
 
